# ApiDashboard

./: .gitignore  pyproject.toml  urls.org
backend_checker/: __init__.py  display.py  entrypoint.py  slack.py
backend_checker/checkers/: __init__.py  connectors.py  outputs.py
backend_checker/django/resources/: __init__.py
backend_checker/django/resources/data_provider/: __init__.py  instrument.py
backend_checker/models/: dataprovider.py  flow.py  run.py
backend_checker/services/: backend.py  slack.py
connectorcheck/: __init__.py  backend.py  dataclass.py  entrypoint.py
tests/: test_backend_checker.py
